--- a/Trip/Base.lproj/Main.storyboard
+++ b/Trip/Base.lproj/Main.storyboard
@@ -30,7 +30,7 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="315"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="trip" translatesAutoresizingMaskIntoConstraints="NO" id="9uo-J9-9sI">
-                                                        <rect key="frame" x="81" y="31.5" width="252" height="252"/>
+                                                        <rect key="frame" x="144" y="94.5" width="126" height="126"/>
                                                     </imageView>
                                                 </subviews>
                                                 <constraints>
@@ -138,6 +138,9 @@
                                                 <state key="normal" title="Log In  ">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
+                                                <connections>
+                                                    <segue destination="KYs-hh-lvI" kind="show" id="q7y-gH-llW"/>
+                                                </connections>
                                             </button>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="qEy-VP-bgJ">
                                                 <rect key="frame" x="82.5" y="555" width="249.5" height="30"/>
@@ -351,7 +354,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="401"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="trip" translatesAutoresizingMaskIntoConstraints="NO" id="7Ym-TR-OZR">
-                                        <rect key="frame" x="144" y="137.5" width="126" height="126"/>
+                                        <rect key="frame" x="81" y="74.5" width="252" height="252"/>
                                     </imageView>
                                 </subviews>
                                 <constraints>
@@ -1084,6 +1087,16 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="48Y-L5-DxP" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2768" y="252"/>
+        </scene>
+        <!--HomeStoryboard-->
+        <scene sceneID="V7o-nH-XoK">
+            <objects>
+                <viewControllerPlaceholder storyboardName="HomeStoryboard" id="KYs-hh-lvI" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="fyw-P0-qhc"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bYN-MA-6OD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-659" y="275"/>
         </scene>
     </scenes>
     <resources>
